--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,13 @@
+html{
+  /* background: #151515; */
+  background: #555;
+}
 body {
-  margin: 0;
+  background: #353535;
+  min-height: 100vh;
+  width: 100%;
+  max-width: 1050px;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
