--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,19 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .App {
-  text-align: center;
+  min-height: calc(100vh - 10vh);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#page-desc {
+  font-family: sans-serif;
+  padding: 0 4vw;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#page-desc h1 {
+  text-transform: capitalize;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 1050px) {
+  #page-desc{
+    padding: 0 50px;
   }
 }
